---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2020-07-26
  Features:
    - Added French translation by Dae
  Changes:
    - Slightly changed GUI layout to better accommodate different locales
  Bugfixes:
    - Fixed a potential crash if a GUI handler was removed between versions
    - Fixed that the window frames would not stretch if the content was wider than default
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2020-07-09
  Changes:
    - on_tick event is conditionally registered again - the mod no longer uses performance when not in use
  Bugfixes:
    - Fixed that it was possible to hold the edit capsule while editing by using the hotkey, causing a crash when trying to use it
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2020-06-24
  Bugfixes:
    - Fixed a crash related to GUI style changes in Factorio 0.18.33
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2020-06-22
  Bugfixes:
    - Fixed inconsistent tick comparison after the simulation has been paused at least once
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2020-05-26
  Features:
    - Added keyboard shortcut to get the edit tool directly (disabled by default)
  Changes:
    - Refactored the mod structure to improve performace and simplicity
    - Switched from RaiLuaLib to FLib
    - Switched to double quotes everywhere
    - Minor GUI style cleanup for 0.18.27
  Bugfixes:
    - Fixed that a player's tilegrids and data would remain behind if they were removed