@@ -91,8 +91,9 @@ data:extend{
     name = "tl-get-draw-capsule",
     order = "a[alt-mode]-b[copy]",
     associated_control_input = "tl-get-draw-capsule",
-    action = "create-blueprint-item",
-    item_to_create = "tl-draw-capsule",
+    action = "lua",
+    -- action = "create-blueprint-item",
+    -- item_to_create = "tl-draw-capsule",
     icon = shortcut_icon("x32.png", 32),
     small_icon = shortcut_icon("x24.png", 24),
     disabled_icon = shortcut_icon("x32-white.png", 32),
